refactor to reduce the interval wait time
